fix of gallery on mobile

--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -324,8 +324,10 @@
   grid-template-rows: repeat(2, 1fr);
 
   &__img {
-    width: 100%;
-    height: 100%;
+    @include respond(desktop) {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   @include respond(phone) {
